# BibleGraphRAG

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
core/: __init__.py  config.py  llm.py
core/cli/: __init__.py  app.py
core/cost/: __init__.py  estimate.py
core/graph/: __init__.py  build.py  client.py  embed.py  engine.py  entities.py  episodes.py  inspect.py  load_neo4j.py  neo4j_util.py  neo4j_vectors.py  query.py  route.py  search.py  transfer.py
core/pipe/: __init__.py  enrich.py  parser.py  pericope.py
core/research/: __init__.py  fulltext.py  graph.py  nodes.py  openalex.py  prompts.py  state.py
docs/: dzhng-deep-research.md  langchain-ai-open-deep-research.md  langchain-langgraph.md  microsoft-graphrag.md
rag/: settings.yaml
rag/prompts/: basic_search_system_prompt.txt  community_report_graph.txt  community_report_text.txt  drift_reduce_prompt.txt  drift_search_system_prompt.txt  extract_graph.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  local_search_system_prompt.txt  question_gen_system_prompt.txt  summarize_descriptions.txt
