[project]
name = "biblegraphrag"
version = "0.1.0"
description = "GraphRAG pipeline with Graphiti over biblical text"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "graphiti-core>=0.29.2",
]

[project.scripts]
bgr = "core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
