[project]
name = "biblegraphrag"
version = "0.1.0"
description = "GraphRAG pipeline with Graphiti over biblical text"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "graphiti-core>=0.29.2",
    "langchain-openai>=1.3.3",
    "pydantic-settings>=2.0",
    "tiktoken>=0.13.0",
]

[project.scripts]
bgr = "core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
