[project]
name = "biblegraphrag"
version = "0.1.0"
description = "GraphRAG pipeline with Microsoft GraphRAG over biblical text"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "graphrag>=3.1,<3.2",
    "pandas>=2.2",
    "langchain-openai>=1.3.3",
    "pydantic-settings>=2.0",
    "tiktoken>=0.13.0",
    "neo4j>=6.2.0",
    "botocore>=1.43.36",
]

[project.scripts]
bgr = "core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
